feat: add new impl and update a code
changes:
- simplify a paramater naming.
- add env variable for toggle dependency.
- add new config redis client impl.
- add new std response builder for rest api and general purpose.
- add new impl interceptor handler.

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,16 @@ go.work.sum
 # env file
 .env
 
+# Mac OS
 .DS_Store
+
+# VS Code
 .vscode
+
+# Go Binary
+bin
+!bin/README.md
+
+# Storage Logs
+storage/logs
+!storage/logs/README.md
