fix: configuration for pkg logger.

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,5 @@
+APP_BASE_MODULE="github.com/Mind2Screen-Dev-Team/go-skeleton"
+
 DB_GOOSE_DRIVER="mysql"
 DB_GOOSE_DBSTRING="user:pass@tcp(host:port)/dbname"
 DB_GOOSE_MIGRATION_DIR="./database/migrations"
