feat: add script proto generator via makefile and add some example grpc proto files.

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,8 @@
 APP_BASE_MODULE="github.com/Mind2Screen-Dev-Team/go-skeleton"
 
+APP_PROTO_DIR=protos
+APP_PROTO_GEN_DIR=gen/grpc
+
 DB_GOOSE_DRIVER="mysql"
 DB_GOOSE_DBSTRING="user:pass@tcp(host:port)/dbname"
 DB_GOOSE_MIGRATION_DIR="./database/migrations"
